--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
             <version>2.13.3</version>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>31.1-jre</version>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>4.4.0</version>
         </dependency>
     </dependencies>
 
