--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <artifactId>stanford-corenlp</artifactId>
             <version>4.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>4.4.0</version>
+            <classifier>models</classifier>
+        </dependency>
+
     </dependencies>
 
     <build>
